--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
   --body-font-family: "Roboto", sans-serif;
   --logo-font-family: "Raleway", sans-serif;
+  --color: var(--IRIS, #4d5ae5);
 }
 
 /* Global Style */
@@ -105,8 +106,17 @@ img {
 }
 
 .first-section {
-  background-color: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url("../images/people-office.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   padding: 188px 0 188px;
+  width: 1440px;
+  height: 600px;
+  flex-shrink: 0;
 }
 
 .hero-content {
@@ -143,6 +153,39 @@ img {
 
 .second-section {
   padding: 120px 0 120px;
+}
+
+.icons-svg {
+  display: flex;
+  width: 264px;
+  height: 112px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: var(--CLOUD, #f4f4fd);
+}
+
+.icon-svg {
+  display: block;
+  margin: auto;
+}
+
+.second-section-titles {
+  color: #2e2f42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  justify-content: flex-start;
+  margin-bottom: 8px;
+}
+
+.second-section-paragraph {
+  color: #434455;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  line-height: 150%;
+  text-align: flex-start;
 }
 
 .visually-hidden {
@@ -278,6 +321,27 @@ img {
   letter-spacing: 0.02em;
   line-height: 150%;
   text-align: center;
+}
+
+.team-social-media-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  fill: #f4f4fd;
+}
+
+.team-social-media-icon {
+  background-color: var(--IRIS, #4d5ae5);
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 .link {
