--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@ img {
 
 .header-container {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba (46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba (46, 47, 66, 0.08);
 }
 
 .header-section {
@@ -113,8 +115,9 @@ img {
     url("../images/people-office.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   padding: 188px 0 188px;
-  width: 1440px;
+  max-width: 1440px;
   height: 600px;
   flex-shrink: 0;
 }
@@ -162,6 +165,9 @@ img {
   flex-shrink: 0;
   border-radius: 4px;
   background: var(--CLOUD, #f4f4fd);
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
 }
 
 .icon-svg {
@@ -327,7 +333,6 @@ img {
   list-style: none;
   display: flex;
   justify-content: center;
-  align-items: center;
   gap: 24px;
   fill: #f4f4fd;
 }
@@ -336,12 +341,24 @@ img {
   background-color: var(--IRIS, #4d5ae5);
   width: 40px;
   height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
+}
+
+.social-media-links {
+  width: 100%;
+  height: 100%;
+  background-color: var(--IRIS, #4d5ae5);
   border-radius: 50%;
-  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-media-icon {
+  fill: #f4f4fd;
+}
+
+.social-media-links:hover .social-media-links:focus {
+  background-color: #404bbf;
 }
 
 .link {
