--- a/css/style.css
+++ b/css/style.css
@@ -328,10 +328,9 @@ img {
   line-height: 150%;
   text-align: center;
 }
-
 .team-social-media-list {
   list-style: none;
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   gap: 24px;
   fill: #f4f4fd;
@@ -361,8 +360,51 @@ img {
   background-color: #404bbf;
 }
 
+.fifth-section {
+  padding: 120px 0;
+}
+
+.customers-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+
+.customers-element {
+  list-style: none;
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
+
+.customers-link {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #8e8f99;
+}
+
+.customers-link:hover .customers-link:focus {
+  border-color: #404bbf;
+  color: #404bbf;
+}
+
+.customers-icon {
+  fill: #8e8f99;
+}
+
 .link {
   text-decoration: none;
+}
+
+.footer-social-media {
+  display: flex;
+  align-items: baseline;
+  margin-right: 120px;
 }
 
 .footer-section {
@@ -392,4 +434,44 @@ img {
   line-height: 150%;
   letter-spacing: 0.02em;
   max-width: 264px;
+}
+
+.second-paragraph {
+  color: var(--WHITE, #fff);
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.footer-social-media-list {
+  display: flex;
+  gap: 16px;
+  list-style: none;
+}
+
+.footer-social-media-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-.social-media-links {
+  width: 100%;
+  height: 100;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-.social-media-links:hover .footer-.social-media-links:focus {
+  background-color: #31d0aa;
+}
+
+.footer-icon {
+  fill: #f4f4fd;
 }
