--- a/css/style.css
+++ b/css/style.css
@@ -490,7 +490,7 @@ img {
 
 .footer-.social-media-links {
   width: 100%;
-  height: 100;
+  height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
   display: flex;
@@ -499,6 +499,10 @@ img {
 }
 
 .footer-.social-media-links:hover .footer-.social-media-links:focus {
+  background-color: #31d0aa;
+}
+
+.footer-social-media-icon:hover .footer-social-media-icon:focus {
   background-color: #31d0aa;
 }
 
