--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,6 @@ img {
 }
 
 .team-social-media-icon {
-  background-color: var(--IRIS, #4d5ae5);
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -362,6 +361,7 @@ img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  background-color: #4d5ae5;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -369,10 +369,6 @@ img {
 
 .social-media-icon {
   fill: #f4f4fd;
-}
-
-.team-social-media-icon:hover .team-social-media-icon:focus {
-  background-color: #404bbf;
 }
 
 .social-media-links:hover .social-media-links:focus {
