--- a/css/style.css
+++ b/css/style.css
@@ -379,7 +379,7 @@ img {
   padding: 120px 0;
 }
 
-.customers-list {
+.customers-content {
   display: flex;
   gap: 24px;
 }
@@ -395,9 +395,6 @@ img {
   height: 100%;
   border: 1px solid #8e8f99;
   border-radius: 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   color: #8e8f99;
 }
 
