--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ img {
 
 .header-section {
   display: flex;
+  justify-content: space-between;
 }
 
 .nav-elements {
@@ -39,6 +40,7 @@ img {
 
 .menu {
   list-style: none;
+  padding: 0;
   display: flex;
   gap: 40px;
 }
@@ -80,10 +82,6 @@ img {
 .nav-link:hover,
 .nav-link:focus {
   color: #404bbf;
-}
-
-.list-items {
-  margin-right: 40px;
 }
 
 .last-li {
@@ -130,6 +128,7 @@ img {
   letter-spacing: 0.02em;
   max-width: 496px;
   margin: 0 auto;
+  margin-bottom: 48px;
 }
 
 .btn-order-service {
@@ -341,6 +340,7 @@ img {
   text-align: center;
 }
 .team-social-media-list {
+  padding: 0;
   list-style: none;
   display: flex;
   justify-content: center;
@@ -380,14 +380,15 @@ img {
 }
 
 .customers-content {
-  display: flex;
   gap: 24px;
+  display: flex;
+  padding: 0;
 }
 
 .customers-element {
   list-style: none;
-  width: calc((100% - 120px) / 6);
   height: 88px;
+  width: calc((100% - 120px) / 6);
 }
 
 .customers-link {
@@ -396,6 +397,11 @@ img {
   border: 1px solid #8e8f99;
   border-radius: 4px;
   color: #8e8f99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover .customers-link:focus {
@@ -419,6 +425,7 @@ img {
 .footer-social-media {
   display: flex;
   align-items: baseline;
+  flex-direction: column;
 }
 
 .footer-section {
@@ -469,6 +476,7 @@ img {
   display: flex;
   gap: 16px;
   list-style: none;
+  padding: 0;
 }
 
 .footer-social-media-icon {
