--- a/css/style.css
+++ b/css/style.css
@@ -509,7 +509,7 @@ img {
   justify-content: center;
 }
 
-.footer-.social-media-links {
+.footer-social-media-links {
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
@@ -519,7 +519,7 @@ img {
   justify-content: center;
 }
 
-.footer-.social-media-links:hover .footer-.social-media-links:focus {
+.footer-social-media-links:hover .footer-social-media-links:focus {
   background-color: #31d0aa;
 }
 
@@ -529,4 +529,7 @@ img {
 
 .footer-icon {
   fill: #f4f4fd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
