--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,11 @@ ul {
   display: block;
 }
 
-.portfolio-links:hover .portfolio-links:focus {
+.portfolio-links:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.portfolio-links:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -432,13 +436,13 @@ ul {
 }
 
 .customers-link:hover {
-  border-color: var(--OCEAN, #404bbf);
-  color: var(--OCEAN, #404bbf);
+  border-color: #404bbf;
+  color: #404bbf;
 }
 
 .customers-link:focus {
-  border-color: var(--OCEAN, #404bbf);
-  color: var(--OCEAN, #404bbf);
+  border-color: #404bbf;
+  color: #404bbf;
 }
 
 .customers-icon {
